arvRVs and fixed nans in flux

--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:08410aa818266055d53728d100edc9c397507646d2dbf94b77c0679abd5bcf03"
+  "signature": "sha256:002228bb1a524e6f644cf023bec47517b01a024aa42936415f791d26040dbb06"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -16,21 +16,34 @@
       "import numpy as np\n",
       "import glob\n",
       "import pickle\n",
-      "import scipy.stats as stats"
+      "import scipy.stats as stats\n",
+      "import RVTools as RVT"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "def all_spec_overlap(thisStar, thisCamIdx = '', booShow = True, booSave = False):\n",
+      "    import gc\n",
       "    '''\n",
       "    All spectra for thisCam, or all cams if thisCam is skipped.\n",
       "    '''\n",
+      "    gc.enable()\n",
+      "    \n",
       "    fig, ax = plt.subplots(2,2, sharey='all')\n",
       "    \n",
       "    # ax.set_yticks(thisStar.exposures.JDs)\n",
@@ -47,22 +60,29 @@
       "        nFluxes = thisCam.wavelengths.shape[0]\n",
       "#         ax[0,0].set_yticks(np.arange(0,nFluxes))\n",
       "#         ax[0,0].set_ylim(-1,nFluxes)\n",
+      "        ax[0,0].set_ylim(-50 ,(nFluxes+2)*10)\n",
       "    \n",
       "        for i in np.arange(nFluxes):\n",
       "                if np.sum(thisCam.wavelengths[i])>0:\n",
-      "                    d, f = thisCam.wavelengths[i], thisCam.red_fluxes[i]/np.median(thisCam.red_fluxes[i])\n",
+      "                    d, f = thisCam.wavelengths[i], thisCam.red_fluxes[i]/np.abs(np.median(thisCam.red_fluxes[i]))\n",
       "                    if cam ==0:\n",
       "                        ax[0,0].plot(d, f+i*10, 'b')\n",
       "                    elif cam==1:\n",
-      "                        ax[0,1].plot(d, f+i, 'g')\n",
+      "                        ax[0,1].plot(d, f+i*10, 'g')\n",
       "                    elif cam==2:\n",
-      "                        ax[1,0].plot(d, f+i, 'r')\n",
+      "                        ax[1,0].plot(d, f+i*10, 'r')\n",
       "                    elif cam==3:\n",
-      "                        ax[1,1].plot(d, f+i, 'cyan')\n",
+      "                        ax[1,1].plot(d, f+i*10, 'cyan')\n",
       "                #         ax.plot(d, f+thisStar.exposures.JDs[i], 'k')\n",
-      "    \n",
+      "    thisCam = None\n",
+      "    name = thisStar.name\n",
+      "    thisStar = None\n",
+      "    fig = None\n",
+      "    ax = None\n",
+      "    time = None\n",
+      "    gc.collect()\n",
       "    plt.xlabel('Wavelength [Ang]')\n",
-      "    plt.title(thisStar.name+' - Camera '+str(cam+1))\n",
+      "    plt.title(name+' - Camera '+str(cam+1))\n",
       "#     plt.gca().set_yticks(range(thisCam.wavelengths.shape[0]))\n",
       "#     plt.gca().set_yticklabels(thisCam.fileNames)\n",
       "\n",
@@ -74,11 +94,14 @@
       "\n",
       "#     ax[0,0].set_yticklabels(fileNames)\n",
       "    if booSave==True: \n",
-      "        try:\n",
-      "            plt.savefig('plots/' + thisStar.name + 'SOvl_cam' + str(cam+1), dpi = 1000 )\n",
-      "        except:\n",
-      "            print 'Couldn''t save'\n",
-      "    if booShow==True: plt.show()\n"
+      "#         try:\n",
+      "        plt.savefig('plots/' + name + 'SOvl_cam' + str(cam+1), dpi = 1000 )\n",
+      "#         except:\n",
+      "#             print 'Couldn''t save'\n",
+      "    if booShow==True: plt.show()\n",
+      "\n",
+      "    plt.close()\n",
+      "    "
      ],
      "language": "python",
      "metadata": {},
@@ -238,13 +261,14 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def RVs_all_stars_NPYs(idStars = [], sigmaClip = -1, RVClip = -1, topStars = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
+      "def RVs_all_stars_NPYs(booShowArcRVs = False, idStars = [], sigmaClip = -1, RVClip = -1, topStars = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
       "    \n",
       "    data=np.load('npy/data.npy')\n",
       "    RVs=np.load('npy/RVs.npy')\n",
       "    sigmas=np.load('npy/sigmas.npy')\n",
       "    baryVels=np.load('npy/baryVels.npy')\n",
       "    JDs=np.load('npy/JDs.npy')\n",
+      "    arcRVS=np.load('npy/arcRVs.npy')\n",
       "    \n",
       "#     order = np.argsort(np.nanstd(RVs,axis=1),axis=0)\n",
       "#     np.save('npy/order.npy',order)\n",
@@ -298,7 +322,7 @@
       "                plt.title(title, y=1.1)\n",
       "            \n",
       "            if data[i,0] in idStars:\n",
-      "                m = '+'\n",
+      "                m = '*'\n",
       "                s=100\n",
       "                c='k'\n",
       "            else:\n",
@@ -309,12 +333,18 @@
       "            \n",
       "#             plt.errorbar(X, Y[i,:,cam], yerr=YERR[i,:,cam]*1000, fmt='.', label = labels[cam], color = colors[cam])\n",
       "            if booBaryCorrect==True: \n",
-      "                plt.scatter(X, Y[i,:,cam]- baryVels, color = c, s=s, marker=m)\n",
+      "                plt.scatter(X, Y[i,:,cam]- baryVels, color = c, s=s, marker=m, label = 'Stars')\n",
       "\n",
       "            else:\n",
-      "                plt.scatter(X, Y[i,:,cam], color = c, s=s, marker=m)\n",
+      "                plt.scatter(X, Y[i,:,cam], color = c, s=s, marker=m, label = 'Stars')\n",
       "\n",
-      "            \n",
+      "            if booShowArcRVs==True:\n",
+      "                if data[i,0] in idStars:\n",
+      "                    print i,data[i,:],RVT.pivot2idx(data[i,2].astype(int))\n",
+      "                    arcRVs = np.load('npy/arcRVs.npy')\n",
+      "                    plt.scatter(X, arcRVs[RVT.pivot2idx(data[i,2].astype(int)),:,cam], marker = '+' , label = 'ARC RV', color = 'm', s=500)\n",
+      "                    plt.scatter(X, np.nanmean(arcRVs, axis=0)[:,cam], marker = '_' , label = 'mean ARC RV', color='k', s=300)\n",
+      "                \n",
       "#             plt.plot(X, Y[i,:,cam], label = labels[cam], color = colors[cam])\n",
       "#             plt.scatter(X, Y[i,:,cam], label = labels[cam], color = 'k')\n",
       "\n",
@@ -350,7 +380,9 @@
       "#         ax2.set_xlabel('Epoch')\n",
       "        \n",
       "\n",
-      "        plt.legend(loc=0)\n",
+      "\n",
+      "        plt.grid(True)\n",
+      "#         plt.legend(loc=0)\n",
       "        if booSave==True: \n",
       "            try:\n",
       "                plotName = 'plots/All_RVs_'+labels[cam]+''\n",
@@ -375,11 +407,11 @@
      "input": [
       "def RVs_by_star_NPYs(sigmaClip = -1, RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
       "    \n",
-      "    data=np.load('data.npy')\n",
-      "    RVs=np.load('RVs.npy')\n",
-      "    sigmas=np.load('sigmas.npy')\n",
-      "    baryVels=np.load('baryVels.npy')\n",
-      "    JDs=np.load('JDs.npy')\n",
+      "    data=np.load('npy/data.npy')\n",
+      "    RVs=np.load('npy/RVs.npy')\n",
+      "    sigmas=np.load('npy/sigmas.npy')\n",
+      "    baryVels=np.load('npy/baryVels.npy')\n",
+      "    JDs=np.load('npy/JDs.npy')\n",
       "\n",
       "    X = range(data[:,0].shape[0])\n",
       "    Y = RVs\n",
@@ -569,7 +601,6 @@
      "collapsed": false,
      "input": [
       "def RVCorr_Slit(thisStarName = 'Giant01', RVClip = -1, booSave = False, booShow = True, booBaryPlot = False, booBaryCorrect = False, title = ''):\n",
-      "    import RVTools as RVT\n",
       "    \n",
       "    data=np.load('npy/data.npy')\n",
       "    RVs=np.load('npy/RVs.npy')\n",
@@ -835,15 +866,14 @@
      "input": [
       "def flux_and_CC(RVref=5000, booSave = False, booShow = True):\n",
       "    #Creates plots of 2fluxes and the corresponding CC for RVs >RVref\n",
-      "    import RVTools\n",
       "\n",
       "    labels = ['Blue','Green','Red','IR']\n",
       "    \n",
       "    data=np.load('npy/data.npy')\n",
       "    RVs=np.load('npy/RVs.npy')\n",
       "    i=0\n",
-      "    for cam in range(RVs.shape[2])[1:2]:\n",
-      "        for epoch in range(RVs.shape[1])[3:]:\n",
+      "    for cam in range(RVs.shape[2])[:]:\n",
+      "        for epoch in range(RVs.shape[1])[:]:\n",
       "            for star in range(RVs.shape[0])[:]:\n",
       "#                 if np.abs(RVs[star,epoch,cam])>RVref:\n",
       "#                 if ((RVs[star,epoch,cam]<-1000) & (RVs[star,epoch,cam]>-3000)):\n",
@@ -854,7 +884,7 @@
       "                filehandler = open('obj/'+fileName, 'r')\n",
       "                thisStar = pickle.load(filehandler)\n",
       "\n",
-      "                lambda1,flux1, lambda2,flux2, CCCurve, p, x_mask, RV = RVTools.single_RVs_CC_t0(thisStar, cam = cam, t = epoch)\n",
+      "                lambda1,flux1, lambda2,flux2, CCCurve, p, x_mask, RV = RVT.single_RVs_CC_t0(thisStar, cam = cam, t = epoch)\n",
       "\n",
       "                plt.subplot(2,1,1)\n",
       "                plt.title(thisStar.name +' '+ labels[cam]+' Original Fluxes - RV='+str(RV))\n",
@@ -864,12 +894,12 @@
       "                plt.subplot(2,1,2)\n",
       "                plt.title('Cross Correlation')\n",
       "                plt.plot(CCCurve/np.max(CCCurve), label='CC Curve')\n",
-      "                plt.plot(x_mask,RVTools.gaussian(x_mask, p[0], p[1] ), label='Gaussian fit', c='r')\n",
+      "                plt.plot(x_mask,RVT.gaussian(x_mask, p[0], p[1] ), label='Gaussian fit', c='r')\n",
       "                plt.legend(loc=0)        \n",
       "\n",
       "                if booSave==True: \n",
       "                    try:\n",
-      "                        plotName = 'plots/'+str(cam+1)+'/CC_'+data[star,0]+'_'+str(epoch)+'_'+str(cam)\n",
+      "                        plotName = 'plots/'+str(cam+1)+'/CC_'+data[star,0]+'_'+str(epoch)+'_'+str(cam+1)\n",
       "                        print 'Attempting to save', plotName\n",
       "                        plt.savefig(plotName)\n",
       "\n",
@@ -891,6 +921,45 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def arcRVs(booSave = False, booShow = True, booFit = False):\n",
+      "    arcRVs = np.load('npy/arcRVs.npy')\n",
+      "    MJDs = np.load('npy/JDs.npy')\n",
+      "    \n",
+      "    colors = ['b','g','r','c']\n",
+      "\n",
+      "    for epoch,MJD in enumerate(MJDs):\n",
+      "        for cam in range(4):\n",
+      "            y = arcRVs[:,epoch,cam]\n",
+      "            plt.plot(y,'.'+colors[cam])\n",
+      "            if booFit==True:\n",
+      "                x = np.arange(len(y))\n",
+      "                p = np.polyfit(x[-np.isnan(y)],y[-np.isnan(y)],1)\n",
+      "                plt.plot(x,x*p[0]+p[1])\n",
+      "                \n",
+      "        plt.title('MJD='+str(MJD))\n",
+      "        if booSave==True: \n",
+      "            try:\n",
+      "                plotName = 'plots/arcRVs_'+str(epoch)\n",
+      "                print 'Attempting to save', plotName\n",
+      "                plt.savefig(plotName)\n",
+      "\n",
+      "            except Exception,e: \n",
+      "                print str(e)\n",
+      "                print 'FAILED'\n",
+      "        if booShow==True: plt.show()\n",
+      "        plt.close()        \n",
+      "\n",
+      "    \n",
+      "    "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
