--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d19a6833ebca64e414a4f4ddcd027ab8e5fe7e9d3aad7fa7d6ddedeebbf1a47b"
+  "signature": "sha256:ee7cc6c0069e96cc35c75e6716b9b76df9b7d5762526a5616ec600c6ee626fbe"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,16 +13,16 @@
      "collapsed": false,
      "input": [
       "import numpy as np\n",
-      "import pickle\n",
       "import pylab as plt\n",
       "from scipy import interpolate, signal, optimize, constants, stats\n",
       "import pyfits as pf\n",
-      "import sys"
+      "import sys\n",
+      "import os"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -38,7 +38,120 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def clean_flux(wavelength, flux, thisCam, xDef = 1, medianRange = 0):\n",
+      "def pivot2idx(pivot):\n",
+      "    pivot = np.array(pivot)\n",
+      "    \n",
+      "    rev_num = [np.nan] + ((np.tile(np.arange(10,0,-1),40)+np.repeat(np.arange(0,40)*10,10))-1).tolist()\n",
+      "    rev_num = np.array(rev_num)\n",
+      "    \n",
+      "    return rev_num[pivot]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def idx2pivot(idx):\n",
+      "\n",
+      "    rev_num = [np.nan] + ((np.tile(np.arange(10,0,-1),40)+np.repeat(np.arange(0,40)*10,10))-1).tolist()\n",
+      "    \n",
+      "    if len(np.where(rev_num==idx))>0:\n",
+      "        result = np.where(rev_num==idx)[0][0]\n",
+      "    else:\n",
+      "        result = np.nan\n",
+      "\n",
+      "    return result\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# cd ../HERMES/reductions/6.5/HD285507/obj/"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "/Users/Carlos/Documents/HERMES/reductions/6.5/HD285507/obj\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# import numpy as np\n",
+      "# import pylab as plt\n",
+      "# import pickle\n",
+      "\n",
+      "# filename = 'Giant35.obj'\n",
+      "# # filename = 'Brght01.obj'\n",
+      "# # filename = 'red_Giant01.obj'\n",
+      "# # filename = 'Giant01.obj'\n",
+      "# # filename = 'Field01.obj'\n",
+      "# filehandler = open(filename, 'r')\n",
+      "# thisStar = pickle.load(filehandler)\n",
+      "\n",
+      "# thisCam = thisStar.exposures.cameras[1]\n",
+      "# wl = thisCam.wavelengths[0]\n",
+      "# flux1 = thisCam.red_fluxes[0] \n",
+      "# flux1 = flux1[::-1]\n",
+      "# # plt.plot(flux1)\n",
+      "# # plt.plot(np.isnan(flux1).astype(int)*50)\n",
+      "# # plt.show()\n",
+      "# print sum(np.isnan(thisCam.red_fluxes[0]))\n",
+      "# print sum(np.isnan(thisCam.red_fluxes[-1]))\n",
+      "# clean_flux(wl,flux1)\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "16\n",
+        "13\n",
+        "[ nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
+        "  nan]\n",
+        "[ 23.70550156  23.67820193  23.6509023   23.62360268  23.59630305\n",
+        "  23.56900342  23.5417038   23.51440417  23.48710454  23.45980492\n",
+        "  23.43250529  23.40520566  23.37790604  23.35060641  23.32330678\n",
+        "  23.29600716]\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 64,
+       "text": [
+        "(array([ 5649.        ,  5649.05470086,  5649.10940171, ...,  5872.89059829,\n",
+        "         5872.94529915,  5873.        ]),\n",
+        " array([ -0.00000000e+00,  -2.09759612e-05,  -4.03797374e-05, ...,\n",
+        "                     nan,              nan,              nan]))"
+       ]
+      }
+     ],
+     "prompt_number": 64
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def clean_flux(wavelength, flux, thisCam = [], xDef = 1, medianRange = 0, flatten = True):\n",
       "    '''Clean a 1D spectrum. \n",
       "    \n",
       "    Parameters\n",
@@ -50,20 +163,46 @@
       "        Number of pixels to median over. 0 will skip this step. Optional.\n",
       "\n",
       "    '''\n",
+      "    \n",
+      "    #fix initial nans on edges\n",
+      "    nanMap = np.isnan(flux)\n",
+      "    leftEdgeIdx=0\n",
+      "    rightEdgeIdx=len(flux)\n",
+      "    \n",
+      "#     nanMapIdx = np.where(nanMap==True) make the next lines faster by using this....\n",
+      "    \n",
+      "    for i,booI in enumerate(nanMap):\n",
+      "        if booI==False:\n",
+      "            leftEdgeIdx = i\n",
+      "            break\n",
+      "            \n",
+      "    for j,rbooI in enumerate(nanMap[::-1]):\n",
+      "        if rbooI==False:\n",
+      "            rightEdgeIdx = len(nanMap)-j\n",
+      "            break        \n",
+      "\n",
+      "    fluxMedian = stats.nanmedian(flux)\n",
+      "    if leftEdgeIdx>0:\n",
+      "        flux[:leftEdgeIdx] = np.linspace(fluxMedian, flux[leftEdgeIdx+1],leftEdgeIdx)\n",
+      "    if rightEdgeIdx<len(flux):\n",
+      "        flux[rightEdgeIdx:] = np.linspace(flux[rightEdgeIdx-1], fluxMedian, len(flux)-rightEdgeIdx)\n",
+      "\n",
+      "        \n",
       "        \n",
       "    #median outliers\n",
       "    if medianRange>0:\n",
       "        fluxMed = signal.medfilt(flux,medianRange)\n",
-      "        w = np.where(abs((flux-fluxMed)/np.maximum(fluxMed,50)) > 0.4)\n",
-      "        for ix in w[0]:\n",
-      "            flux[ix] = fluxMed[ix]\n",
+      "        fluxDiff = abs(flux-fluxMed)\n",
+      "        fluxDiffStd = np.std(fluxDiff)\n",
+      "        mask = fluxDiff> 2 * fluxDiffStd\n",
+      "        flux[mask] = fluxMed[mask]\n",
       "\n",
       "    if ((wavelength[-np.isnan(flux)].shape[0]>0) &  (flux[-np.isnan(flux)].shape[0]>0)):\n",
       "        \n",
-      "        #flatten curve by fitting a 3rd order poly\n",
-      "        fFlux = optimize.curve_fit(cubic, wavelength[-np.isnan(flux)], flux[-np.isnan(flux)], p0 = [1,1,1,1])\n",
-      "        fittedCurve = cubic(wavelength, fFlux[0][0], fFlux[0][1], fFlux[0][2], fFlux[0][3])\n",
-      "        flux = flux/fittedCurve-1\n",
+      "        if flatten==True:#flatten curve by fitting a 3rd order poly\n",
+      "            fFlux = optimize.curve_fit(cubic, wavelength[-np.isnan(flux)], flux[-np.isnan(flux)], p0 = [1,1,1,1])\n",
+      "            fittedCurve = cubic(wavelength, fFlux[0][0], fFlux[0][1], fFlux[0][2], fFlux[0][3])\n",
+      "            flux = flux/fittedCurve-1\n",
       "        \n",
       "        #apply tukey\n",
       "        flux = flux * tukey(0.1, len(flux))\n",
@@ -85,7 +224,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 9
+     "prompt_number": 63
     },
     {
      "cell_type": "code",
@@ -100,7 +239,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -140,7 +279,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -165,7 +304,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -289,7 +428,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -297,6 +436,11 @@
      "input": [
       "def comment(star, epoch, cam, comment):\n",
       "    comments = []\n",
+      "    try:\n",
+      "        os.mkdir('npy')\n",
+      "    except:\n",
+      "        pass\n",
+      "    \n",
       "    try:\n",
       "        comments = np.load('npy/comments.npy')\n",
       "    except:\n",
@@ -315,7 +459,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
@@ -358,7 +503,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -450,7 +596,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 189
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -493,7 +639,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 190
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -508,7 +654,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -547,7 +693,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -563,7 +709,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -579,7 +725,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -639,7 +785,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -659,7 +805,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 33
     },
     {
      "cell_type": "code",
@@ -681,7 +828,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 34
     },
     {
      "cell_type": "code",
@@ -704,7 +851,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 5
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
@@ -900,7 +1047,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 36
     }
    ],
    "metadata": {}
