--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1273570f3d61df5033d78277927ab716e353aa68543a64d72655886250be5235"
+  "signature": "sha256:0dbb43a5f6470514255faa5cbcd5b40f443c002d4c85ba2ef276dfeba983f0ef"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,6 +18,7 @@
       "import pyfits as pf\n",
       "import pickle\n",
       "import toolbox\n",
+      "\n",
       "# import pandas\n"
      ],
      "language": "python",
@@ -36,8 +37,9 @@
       "    Dec = 0\n",
       "    Vmag = 0\n",
       "    \n",
-      "    def __init__(self, name):\n",
-      "        self.load_star_data(name = name)\n",
+      "    def __init__(self, name, mode = '2dfdr'):\n",
+      "        if mode == '2dfdr' :self.load_star_data(name = name)\n",
+      "        if mode == 'iraf' :self.load_star_data_iraf(name = name)\n",
       "        \n",
       "    def load_star_data(self, name):\n",
       "        \n",
@@ -65,6 +67,34 @@
       "#                 self.BV = stetson_df[stetson_df.target == self.name].BV.values[0]\n",
       "                print self.name,'star created'\n",
       "                break\n",
+      "                \n",
+      "    def load_star_data_iraf(self, name):\n",
+      "        \n",
+      "#         stetson_df = pandas.read_pickle('stetson.pd')\n",
+      "        files = glob.glob('cam1/*.fits')\n",
+      "#         for thisFile in files:\n",
+      "        thisFits = pf.open(files[0])\n",
+      "        starNames = []\n",
+      "        for fib in thisFits[0].header['APID*']:\n",
+      "            if not (('PARKED' in fib.value) or ('Grid_Sky' in fib.value) or ('FIBRE ' in fib.value)): \n",
+      "                if fib.value.split(' ')[0] == name:\n",
+      "\n",
+      "\n",
+      "                    self.name = name\n",
+      "#                         self.RA = np.rad2deg(starInfo.field('RA'))\n",
+      "#                         self.Dec = np.rad2deg(starInfo.field('DEC'))        \n",
+      "#                         self.RA_deg, self.RA_min, self.RA_sec = toolbox.dec2sex(self.RA)   \n",
+      "#                         self.Dec_deg, self.Dec_min, self.Dec_sec = toolbox.dec2sex(self.Dec)\n",
+      "                    self.Vmag = fib.value.split(' ')[1]\n",
+      "\n",
+      "    #                 self.B = stetson_df[stetson_df.target == self.name].B.values[0]\n",
+      "    #                 self.I = stetson_df[stetson_df.target == self.name].I.values[0]\n",
+      "    #                 self.R = stetson_df[stetson_df.target == self.name].R.values[0]\n",
+      "    #                 self.U = stetson_df[stetson_df.target == self.name].U.values[0]\n",
+      "    #                 self.V = stetson_df[stetson_df.target == self.name].mag.values[0]\n",
+      "    #                 self.BV = stetson_df[stetson_df.target == self.name].BV.values[0]\n",
+      "                    print self.name,'star created'\n",
+      "                    break\n",
       "                \n"
      ],
      "language": "python",
@@ -130,14 +160,14 @@
       "class exposures():\n",
       "\n",
       "    def __init__(self):\n",
-      "        self.UTdates = []\n",
-      "        self.UTstarts = []\n",
-      "        self.UTends = []\n",
-      "        self.lengths = []\n",
-      "        self.JDs = []\n",
-      "        self.HRs = []\n",
-      "        self.plates = []\n",
-      "        self.pivots = []\n",
+      "#         self.UTdates = []\n",
+      "#         self.UTstarts = []\n",
+      "#         self.UTends = []\n",
+      "#         self.lengths = []\n",
+      "#         self.JDs = []\n",
+      "#         self.HRs = []\n",
+      "#         self.plates = []\n",
+      "#         self.pivots = []\n",
       "        a = camera()\n",
       "        b = camera()\n",
       "        c = camera()\n",
@@ -168,7 +198,7 @@
       "        self.UTends = np.chararray(nExposures,10)\n",
       "        self.lengths = np.zeros(nExposures)\n",
       "        self.plates = np.chararray(nExposures,10)\n",
-      "        self.pivots = np.zeros(nExposures)\n",
+      "        self.pivots = np.zeros(nExposures).astype(int)\n",
       "        self.HRs = np.zeros(nExposures).astype(bool)\n",
       "        \n",
       "        \n",
@@ -210,6 +240,7 @@
       "#                         self.JDs.append(HDUList[0].header['UTMJD'])\n",
       "                        self.plates[thisMJDidx] = HDUList[0].header['SOURCE']\n",
       "                        self.pivots[thisMJDidx] = int(fibreTable.field('PIVOT')[idx][0])\n",
+      "                        print 'pivot',fibreTable.field('PIVOT')[idx]\n",
       "                        if HDUList[0].header['SLITMASK'].strip()=='OUT':\n",
       "                            self.HRs[thisMJDidx] = False\n",
       "                        else:\n",
@@ -226,6 +257,100 @@
       "            thisCam.safe_flag = np.ones(len(thisCam.fileNames)).astype(bool)\n",
       "            print ''\n",
       "\n",
+      "    def load_exposures_iraf(self, name):\n",
+      "        \n",
+      "        print 'Collecting MJDs from all 4 channels'\n",
+      "        for camIdx, cam in enumerate(self.cameras):\n",
+      "            files = glob.glob('cam'+str(camIdx+1)+'/*.fits')\n",
+      "            print 'cam'+str(camIdx+1)+':',len(files) #,files\n",
+      "            for thisFile in files:    \n",
+      "                HDUList = pf.open(thisFile)\n",
+      "                e = float(HDUList[0].header['EXPOSED'])/2/24/60/60 # EXPOSED/2 in days\n",
+      "                inDate = np.hstack((HDUList[0].header['UTDATE'].split(':'),HDUList[0].header['UTSTART'].split(':'))).astype(int)\n",
+      "                MJD = toolbox.gd2jd(inDate, TZ=0) - 2400000.5 + e\n",
+      "                self.JDs.append(MJD)\n",
+      "        a = np.unique(np.round(np.array(self.JDs).astype(float),3))\n",
+      "        self.JDs = np.sort(a)\n",
+      "        nExposures = len(a)\n",
+      "        print nExposures, 'exposures per channel'\n",
+      "        print ''\n",
+      "        \n",
+      "        #create top_level arrays\n",
+      "        self.UTdates = np.chararray(nExposures,10)\n",
+      "        self.UTstarts = np.chararray(nExposures,10)\n",
+      "        self.UTends = np.chararray(nExposures,10)\n",
+      "        self.lengths = np.zeros(nExposures)\n",
+      "        self.plates = np.chararray(nExposures,10)\n",
+      "        self.pivots = np.zeros(nExposures).astype(int)\n",
+      "        self.HRs = np.zeros(nExposures).astype(bool)\n",
+      "        \n",
+      "        \n",
+      "        for camIdx, cam in enumerate(self.cameras):\n",
+      "            files = glob.glob('cam'+str(camIdx+1)+'/*.fits')\n",
+      "            print 'cam'+str(camIdx+1),len(files),'files'\n",
+      "            \n",
+      "            thisCam = cam\n",
+      "            \n",
+      "            #create camera level arrays\n",
+      "            thisCam.red_fluxes = np.zeros((nExposures, 4096))\n",
+      "            thisCam.wavelengths = np.zeros((nExposures, 4096))\n",
+      "            thisCam.fileNames = np.chararray(nExposures,18)\n",
+      "            thisCam.fileNames[:] =  ''\n",
+      "\n",
+      "            \n",
+      "            for thisFile in files: \n",
+      "                print 'Opening',thisFile,\n",
+      "                HDUList = pf.open(thisFile)\n",
+      "                starNames = []\n",
+      "                fits = pf.open(thisFile)\n",
+      "                for fib in fits[0].header['APID*']:\n",
+      "                    if fib.value.split(' ')[0]==name:\n",
+      "                        print name,'found in', thisFile,'pivot =' ,fib.key[4:]\n",
+      "\n",
+      "                        #one time per exposure (because they are equal in all cameras)\n",
+      "                        thisMJDidx = ''\n",
+      "                        e = float(HDUList[0].header['EXPOSED'])/2/24/60/60 # EXPOSED/2 in days\n",
+      "                        inDate = np.hstack((HDUList[0].header['UTDATE'].split(':'),HDUList[0].header['UTSTART'].split(':'))).astype(int)\n",
+      "                        MJD = toolbox.gd2jd(inDate, TZ=0) - 2400000.5 + e\n",
+      "\n",
+      "                        thisMJDidx = np.where(self.JDs==round(float(MJD),3))[0]\n",
+      "                        if len(thisMJDidx)>0:\n",
+      "                            thisMJDidx = thisMJDidx[0]\n",
+      "                            print 'MJD',self.JDs[thisMJDidx]                          \n",
+      "                            self.UTdates[thisMJDidx] = HDUList[0].header['UTDATE']\n",
+      "                            self.UTstarts[thisMJDidx] = HDUList[0].header['UTSTART']\n",
+      "                            self.UTends[thisMJDidx] = HDUList[0].header['UTEND']\n",
+      "                            try:self.lengths[thisMJDidx] = HDUList[0].header['EXPOSED']\n",
+      "                            except: pass\n",
+      "    #                         self.JDs.append(HDUList[0].header['UTMJD'])\n",
+      "                            self.plates[thisMJDidx] = HDUList[0].header['SOURCE']\n",
+      "                            self.pivots[thisMJDidx] = int(fib.key[4:])\n",
+      "                            if HDUList[0].header['SLITMASK'].strip()=='OUT':\n",
+      "                                self.HRs[thisMJDidx] = False\n",
+      "                            else:\n",
+      "                                self.HRs[thisMJDidx] = True\n",
+      "                            if thisMJDidx>0: #interpolates to match epoch 0\n",
+      "                            \n",
+      "                                initialFlux = HDUList[0].data[self.pivots[thisMJDidx]]\n",
+      "                                initialWL = self.extract_IRAF_wavelength(HDUList[0].header, self.pivots[thisMJDidx])\n",
+      "                                refWL = thisCam.wavelengths[0]\n",
+      "                                \n",
+      "                                thisCam.red_fluxes[thisMJDidx] = np.interp(refWL, initialWL, initialFlux) \n",
+      "                                thisCam.wavelengths[thisMJDidx] = thisCam.wavelengths[0]\n",
+      "                            else:\n",
+      "                                thisCam.red_fluxes[thisMJDidx] = HDUList[0].data[self.pivots[thisMJDidx]]\n",
+      "                                thisCam.wavelengths[thisMJDidx] = self.extract_IRAF_wavelength(HDUList[0].header, self.pivots[thisMJDidx])\n",
+      "                                thisCam.red_fluxes[thisMJDidx] = np.interp(thisCam.wavelengths[thisMJDidx], thisCam.wavelengths[thisMJDidx], thisCam.red_fluxes[thisMJDidx]) \n",
+      "\n",
+      "                            thisCam.fileNames[thisMJDidx] = thisFile.split('/')[-1]\n",
+      "                        else:\n",
+      "                            print name, 'found in', thisFile, 'but no matching date' \n",
+      "#                     else:\n",
+      "#                         print name,'not found in', thisFile\n",
+      "\n",
+      "            thisCam.safe_flag = np.ones(len(thisCam.fileNames)).astype(bool)\n",
+      "            print ''\n",
+      "\n",
       "            \n",
       "    def extract_HERMES_wavelength(self, header):\n",
       "        \n",
@@ -237,6 +362,19 @@
       "        Lambda = CRVAL1 - (CRPIX1 - (np.arange(int(CRPIX1)*2)) -1)* CDELT1\n",
       "    \n",
       "        return Lambda\n",
+      "\n",
+      "    def extract_IRAF_wavelength(self, header, app):\n",
+      "\n",
+      "        WS = 'WS_'+str(int(app))\n",
+      "        WD = 'WD_'+str(int(app))\n",
+      "\n",
+      "        first_px = float(header[WS])\n",
+      "        disp = float(header[WD])\n",
+      "        length = header['NAXIS1']\n",
+      "        wl = np.arange(length)*disp\n",
+      "        wl += first_px\n",
+      "\n",
+      "        return wl\n",
       "\n",
       "    \n",
       "    def calculate_baryVels(self, star):\n",
