--- a/RVPlots.ipynb
+++ b/RVPlots.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:002228bb1a524e6f644cf023bec47517b01a024aa42936415f791d26040dbb06"
+  "signature": "sha256:b915dd846225666c436da027ebcb236c2e99f1743dbb99cd9e3225c1e0886750"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,15 +19,6 @@
       "import scipy.stats as stats\n",
       "import RVTools as RVT"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [],
@@ -268,7 +259,11 @@
       "    sigmas=np.load('npy/sigmas.npy')\n",
       "    baryVels=np.load('npy/baryVels.npy')\n",
       "    JDs=np.load('npy/JDs.npy')\n",
-      "    arcRVS=np.load('npy/arcRVs.npy')\n",
+      "    try:\n",
+      "        arcRVS=np.load('npy/arcRVs.npy')\n",
+      "    except:\n",
+      "        print 'Not including arcRVs'\n",
+      "        booShowArcRVs = False\n",
       "    \n",
       "#     order = np.argsort(np.nanstd(RVs,axis=1),axis=0)\n",
       "#     np.save('npy/order.npy',order)\n",
