--- a/create_obj.ipynb
+++ b/create_obj.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0dbb43a5f6470514255faa5cbcd5b40f443c002d4c85ba2ef276dfeba983f0ef"
+  "signature": "sha256:80541805162da9ae0a0eb69a8bac350d9885c02ce12837f4395a5bb0da08112e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -164,7 +164,7 @@
       "#         self.UTstarts = []\n",
       "#         self.UTends = []\n",
       "#         self.lengths = []\n",
-      "#         self.JDs = []\n",
+      "        self.JDs = []\n",
       "#         self.HRs = []\n",
       "#         self.plates = []\n",
       "#         self.pivots = []\n",
