--- a/RVTools.ipynb
+++ b/RVTools.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ee7cc6c0069e96cc35c75e6716b9b76df9b7d5762526a5616ec600c6ee626fbe"
+  "signature": "sha256:cc7a79fe9274d5431a9d8b77a727c1cdb53aae8ea996a90630ef849e7b5a095b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -33,6 +33,24 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def check_equal_wl(wl1, wl2):\n",
+      "    result = False\n",
+      "    \n",
+      "    diff = np.sum(wl1-wl2)\n",
+      "    \n",
+      "    if diff<1e-17:\n",
+      "        result = True\n",
+      "    return result\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -74,84 +92,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# cd ../HERMES/reductions/6.5/HD285507/obj/"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "/Users/Carlos/Documents/HERMES/reductions/6.5/HD285507/obj\n"
-       ]
-      }
-     ],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "# import numpy as np\n",
-      "# import pylab as plt\n",
-      "# import pickle\n",
-      "\n",
-      "# filename = 'Giant35.obj'\n",
-      "# # filename = 'Brght01.obj'\n",
-      "# # filename = 'red_Giant01.obj'\n",
-      "# # filename = 'Giant01.obj'\n",
-      "# # filename = 'Field01.obj'\n",
-      "# filehandler = open(filename, 'r')\n",
-      "# thisStar = pickle.load(filehandler)\n",
-      "\n",
-      "# thisCam = thisStar.exposures.cameras[1]\n",
-      "# wl = thisCam.wavelengths[0]\n",
-      "# flux1 = thisCam.red_fluxes[0] \n",
-      "# flux1 = flux1[::-1]\n",
-      "# # plt.plot(flux1)\n",
-      "# # plt.plot(np.isnan(flux1).astype(int)*50)\n",
-      "# # plt.show()\n",
-      "# print sum(np.isnan(thisCam.red_fluxes[0]))\n",
-      "# print sum(np.isnan(thisCam.red_fluxes[-1]))\n",
-      "# clean_flux(wl,flux1)\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "16\n",
-        "13\n",
-        "[ nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan  nan\n",
-        "  nan]\n",
-        "[ 23.70550156  23.67820193  23.6509023   23.62360268  23.59630305\n",
-        "  23.56900342  23.5417038   23.51440417  23.48710454  23.45980492\n",
-        "  23.43250529  23.40520566  23.37790604  23.35060641  23.32330678\n",
-        "  23.29600716]\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 64,
-       "text": [
-        "(array([ 5649.        ,  5649.05470086,  5649.10940171, ...,  5872.89059829,\n",
-        "         5872.94529915,  5873.        ]),\n",
-        " array([ -0.00000000e+00,  -2.09759612e-05,  -4.03797374e-05, ...,\n",
-        "                     nan,              nan,              nan]))"
-       ]
-      }
-     ],
-     "prompt_number": 64
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def clean_flux(wavelength, flux, thisCam = [], xDef = 1, medianRange = 0, flatten = True):\n",
+      "def clean_flux(wavelength, flux, thisCam = [], xDef = 1, medianRange = 0, flatten = True, useRange = []):\n",
       "    '''Clean a 1D spectrum. \n",
       "    \n",
       "    Parameters\n",
@@ -217,6 +158,13 @@
       "        if (xDef>1):\n",
       "            wavelength = np.linspace(min(wavelength), max(wavelength),len(wavelength)*xDef)\n",
       "            flux = np.ones(wavelength.shape[0])*np.nan\n",
+      "    print 'range',len(useRange)\n",
+      "    if ((useRange!=[]) and (len(useRange)==2)):\n",
+      "        rangeFilter = (wavelength>=useRange[0]) & (wavelength<=useRange[1])\n",
+      "        print 'Using range',useRange, np.sum(rangeFilter), 'pixels'\n",
+      "        \n",
+      "        wavelength = wavelength[rangeFilter]\n",
+      "        flux = flux[rangeFilter]\n",
       "        \n",
       "    return wavelength, flux\n",
       "\n"
@@ -311,7 +259,7 @@
      "collapsed": false,
      "input": [
       "#Create cross correlation curves wrt epoch 0\n",
-      "def RVs_CC_t0(thisStar, starIdx,  xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10, medianRange = 0):\n",
+      "def RVs_CC_t0(thisStar, starIdx,  xDef = 1, CCReferenceSet = 0, printDetails=False, corrHWidth=10, medianRange = 0, useRangeFilter = False):\n",
       "\n",
       "#     validDates = np.all([np.nansum(thisCam.red_fluxes,1).astype(bool) for thisCam in thisStar.exposures.cameras],0)\n",
       "    print ''\n",
@@ -325,72 +273,92 @@
       "        \n",
       "        print 'Camera',cam\n",
       "        \n",
+      "        camFilter = []\n",
+      "        if useRangeFilter==True:\n",
+      "            try:\n",
+      "                if cam==0:\n",
+      "                    camFilter = np.load('npy/cam1Filter.npy')\n",
+      "                elif cam==1:\n",
+      "                    camFilter = np.load('npy/cam2Filter.npy')\n",
+      "                elif cam==2:\n",
+      "                    camFilter = np.load('npy/cam3Filter.npy')\n",
+      "                elif cam==3:\n",
+      "                    camFilter = np.load('npy/cam4Filter.npy')\n",
+      "            except:\n",
+      "                print 'No camera filter found. Using full range.'\n",
+      "            \n",
+      "            print 'camFilter',camFilter\n",
       "        if len(np.arange(len(validDates))[validDates])>0:\n",
       "            CCReferenceSet = np.arange(len(validDates))[validDates][0]\n",
       "        else:\n",
       "            CCReferenceSet = 0\n",
       "            \n",
       "            \n",
-      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[CCReferenceSet], thisCam.red_fluxes[CCReferenceSet], thisCam, medianRange=medianRange)\n",
+      "        lambda1, flux1 = clean_flux(thisCam.wavelengths[CCReferenceSet], thisCam.red_fluxes[CCReferenceSet], thisCam, medianRange=medianRange, useRange = camFilter)\n",
       "        \n",
       "        plts = 0    \n",
       "        for epoch, JD in enumerate(thisStar.exposures.JDs):\n",
       "            print epoch,\n",
-      "            lambda2, flux2 = clean_flux(thisCam.wavelengths[epoch], thisCam.red_fluxes[epoch], thisCam, medianRange=medianRange)\n",
+      "            lambda2, flux2 = clean_flux(thisCam.wavelengths[epoch], thisCam.red_fluxes[epoch], thisCam, medianRange=medianRange, useRange = camFilter)\n",
       "\n",
       "            if validDates[epoch]==True:\n",
-      "#                 CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
-      "#                 if epoch <5:\n",
-      "#                     plt.plot(flux1)\n",
-      "#                     plt.plot(flux2)\n",
-      "#                     plt.plot(CCCurve)\n",
-      "#                     plt.show()\n",
-      "                try:\n",
-      "#                     print 'max_idx, len(CCCurve) =',np.where(CCCurve==max(CCCurve)), CCCurve.shape\n",
-      "                    CCCurve = []\n",
-      "                    CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
-      "                    corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
-      "                    p_guess = [corrMax,corrHWidth]\n",
-      "                    x_mask = np.arange(corrMax-corrHWidth, corrMax+corrHWidth+1)\n",
-      "                    if max(x_mask)<len(CCCurve):\n",
-      "        #                 try:\n",
-      "        #                 print '4 params',p_guess, x_mask, np.sum(x_mask), CCCurve.shape\n",
-      "                        p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
-      "                        if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
-      "                            pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
+      "                if check_equal_wl(lambda1, lambda2)==True:\n",
+      "    #                 CCCurve = signal.fftconvolve(flux1, flux2[::-1], mode='same')\n",
+      "    #                 if epoch <5:\n",
+      "    #                     plt.plot(flux1)\n",
+      "    #                     plt.plot(flux2)\n",
+      "    #                     plt.plot(CCCurve)\n",
+      "    #                     plt.show()\n",
+      "                    try:\n",
+      "    #                     print 'max_idx, len(CCCurve) =',np.where(CCCurve==max(CCCurve)), CCCurve.shape\n",
+      "                        CCCurve = []\n",
+      "                        CCCurve = signal.fftconvolve(flux1[-np.isnan(flux1)], flux2[-np.isnan(flux2)][::-1], mode='same')\n",
+      "                        corrMax = np.where(CCCurve==max(CCCurve))[0][0]\n",
+      "                        p_guess = [corrMax,corrHWidth]\n",
+      "                        x_mask = np.arange(corrMax-corrHWidth, corrMax+corrHWidth+1)\n",
+      "                        if max(x_mask)<len(CCCurve):\n",
+      "            #                 try:\n",
+      "            #                 print '4 params',p_guess, x_mask, np.sum(x_mask), CCCurve.shape\n",
+      "                            p = fit_gaussian(p_guess, CCCurve[x_mask], np.arange(len(CCCurve))[x_mask])[0]\n",
+      "                            if np.modf(CCCurve.shape[0]/2.0)[0]>1e-5:\n",
+      "                                pixelShift = (p[0]-(CCCurve.shape[0]-1)/2.) #odd number of elements\n",
+      "                            else:\n",
+      "                                pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
+      "            #                 except:\n",
+      "            #                     pixelShift = 0\n",
+      "\n",
+      "                            thisQ, thisdRV = QdRV(thisCam.wavelengths[epoch], thisCam.red_fluxes[epoch])\n",
+      "\n",
+      "                            mid_px = thisCam.wavelengths.shape[1]/2\n",
+      "                            dWl = (thisCam.wavelengths[epoch,mid_px+1]-thisCam.wavelengths[epoch,mid_px]) / thisCam.wavelengths[epoch,mid_px]\n",
+      "                            RV = dWl * pixelShift * constants.c \n",
+      "                            print 'RV',RV\n",
+      "\n",
       "                        else:\n",
-      "                            pixelShift = (p[0]-(CCCurve.shape[0])/2.) #even number of elements\n",
-      "        #                 except:\n",
-      "        #                     pixelShift = 0\n",
+      "                            R = 0\n",
+      "                            thisQ = 0\n",
+      "                            thisdRV = 0\n",
+      "                            RV = 0\n",
+      "                            print 'Invalid data point'\n",
       "\n",
-      "                        thisQ, thisdRV = QdRV(thisCam.wavelengths[epoch], thisCam.red_fluxes[epoch])\n",
-      "\n",
-      "                        mid_px = thisCam.wavelengths.shape[1]/2\n",
-      "                        dWl = (thisCam.wavelengths[epoch,mid_px+1]-thisCam.wavelengths[epoch,mid_px]) / thisCam.wavelengths[epoch,mid_px]\n",
-      "                        RV = dWl * pixelShift * constants.c \n",
-      "                        print 'RV',RV\n",
-      "\n",
-      "                    else:\n",
+      "                    except Exception,e: \n",
+      "                        print 'CC Error'\n",
+      "                        print str(e)\n",
       "                        R = 0\n",
       "                        thisQ = 0\n",
       "                        thisdRV = 0\n",
       "                        RV = 0\n",
-      "                        print 'Invalid data point'\n",
-      "\n",
-      "                except Exception,e: \n",
-      "                    print 'CC Error'\n",
-      "                    print str(e)\n",
-      "                    R = 0\n",
+      "    #                     if plts<5:\n",
+      "    #                         plts+=1\n",
+      "    #                         plt.plot(flux1)\n",
+      "    #                         plt.plot(flux2)\n",
+      "    #                         plt.plot(CCCurve)\n",
+      "    #                         plt.show()\n",
+      "                else:\n",
       "                    thisQ = 0\n",
       "                    thisdRV = 0\n",
       "                    RV = 0\n",
-      "#                     if plts<5:\n",
-      "#                         plts+=1\n",
-      "#                         plt.plot(flux1)\n",
-      "#                         plt.plot(flux2)\n",
-      "#                         plt.plot(CCCurve)\n",
-      "#                         plt.show()\n",
-      "\n",
+      "                    print 'Wavelength range not equal'\n",
       "\n",
       "            else:\n",
       "#                 if i==CCReferenceSet:\n",
